@@ -10,7 +10,7 @@ feel free to suggest features, contribute, or comment.
 0.9.0
 
 * AutoReconnect
-* Nested alias
+* Nested alias [AS GOOD AS DONE]
 * Import of Mud Connectfiles
 * Save logfiles of mud-traffic [DONE]
 * Copy/Paste from clipboard
